Actualizo ruta de Logo en principal.html ProT2_32825773

--- a/principal.html
+++ b/principal.html
@@ -46,7 +46,7 @@
                   >
                     <div class="col-sm-2">
                       <img
-                        src="./img/bridge-1751268_1920.png"
+                        src="./img/logo.png"
                         alt=""
                         height="64px"
                         width="64px"
