--- a/pages/login.html
+++ b/pages/login.html
@@ -18,98 +18,137 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     ></script>
   </head>
-  <body>
+  <body class="body-desayunoymerienda">
     <header>
-      <nav>
-        <div class="container-fluid text-center">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="row container-fluid">
-                  <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02"
-                    aria-controls="navbarTogglerDemo02"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid flex-container">
+          <img src="../img/logo.png" alt="" height="64px" width="64px" />
+          <a class="navbar-brand" href="principal.html">
+            ..:: Home Las Recetas ::..</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <p></p>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul
+              class="navbar-nav container-fluid mb-2 mb-lg-0 nav justify-content-center justify-content-lg-between aligin-itms-center"
+            >
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="quienes_somos.html"
+                  >Quienes Somos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="acerca_de_nosotros.html"
+                  >Acerca de nosotros</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link active dropdown-toggle"
+                  href=""
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
                   >
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div
-                    class="collapse navbar-collapse"
-                    id="navbarTogglerDemo02"
-                  >
-                    <div class="col-sm-2">
-                      <img
-                        src="./img/bridge-1751268_1920.png"
-                        alt=""
-                        height="64px"
-                        width="64px"
-                      />
-                      <a class="navbar-brand" href="principal.html">Home</a>
-                    </div>
-                    <div
-                      class="col-7 col-sm-5 container text-center justify-text-center"
+                  ..:: Recetas ::..
+                </a>
+                <ul class="dropdown-menu bg-body-secondary">
+                  <li><i> Desayuno y Merienda</i></li>
+                  <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="./desayuno_y_merienda.html#Dulces"
+                      >Dulces</a
                     >
-                      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                          <a
-                            class="nav-link active"
-                            aria-current="page"
-                            href="quienes_somos.html"
-                            >Quienes Somos</a
-                          >
-                        </li>
-                        <li class="nav-item">
-                          <a
-                            class="nav-link active"
-                            href="acerca_denosotros.html"
-                            >Acerca de nosotros</a
-                          >
-                        </li>
-                        <li class="nav-item">
-                          <a
-                            class="nav-link active"
-                            href="recetas_decomidas.html"
-                            >Recetas de Comidas
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-2 col-sm-3 container text-center">
-                      <form class="d-felx" role="search">
-                        <input
-                          class="form-control me-2"
-                          type="Search"
-                          placeholder="Search"
-                          aria-label="Search"
-                        />
-                        <button class="btn btn-outline-success" type="submit">
-                          Buscar
-                        </button>
-                      </form>
-                    </div>
-                    <div class="col-3 col-sm-2 container justify-text-center">
-                      <ul class="navbar-nav b-2 mb-lg-0">
-                        <li class="nav-item">
-                          <a class="nav-link active" href="registro.html"
-                            >Registrarse</a
-                          >
-                        </li>
-                        <li class="navbar-item">
-                          <a class="nav-link active" href="Login.html">Login</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="./desayuno_y_merienda.html#Saladas"
+                      >Saladas</a
+                    >
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider text-center" />
+                    <i>Almuerzos y Cenas </i>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./almuerzos_y_cenas.html#Fríos">Fríos</a>
+                    <a class="dropdown-item" href="./almuerzos_y_cenas.html#Calientes">Calientes</a>
+                  </li>
+                </ul>
+              </li>
+              <div
+                class="justify-content-center justify-content-lg-between aligin-itms-center"
+              >
+                <form class="d-flex" role="search">
+                  <input
+                    class="form-control me-2"
+                    type="search"
+                    placeholder="Busca tus recetas aquí"
+                    aria-label="Search"
+                  />
+                  <button class="btn btn-outline-success" type="submit">
+                    Buscar
+                  </button>
+                </form>
               </div>
-            </div>
+              <li>
+                <a class="nav-link active" href="./registrarse.html">Registrarse</a>
+              </li>
+              <a class="btn btn-outline-success" href="./login.html" role="button">
+                Login
+              </a>
+            </ul>
           </div>
         </div>
       </nav>
     </header>
+    <main>
+
+      <section class="section-form">
+          <div class="form-container">
+            <h2><b>Login</b></h2>
+            <form action="" method="post">
+              <div class="form-group">
+                <label for="">Correo Electrónico</label>
+                <input type="email" name="" id="email"
+                name="email" placeholder="Ingresa tu correo" required="true">
+              </div>
+              <div class="form-group">
+                <label for="">Contraseña</label>
+                <input type="password" name="" id="password" name="password" placeholder="Crea una Contraseña" required="true"> 
+              </div>
+              <div class="row justify-content-star">
+                <div class="col-4 form-group">
+                  <button type="submit">Registrase</button>
+                </div>
+                <div class="col-4 form-group2">
+                  <button type="submit">Cancelar</button>
+                </div>
+              </div>           
+            <div class="form-footer">¿No tenes una cuenta? <a href="./registrarse.html">Registro aquí</a></div>
+          </form>
+          </div>
+        </section>
+    </main>
   </body>
 </html>
