--- a/pages/login.html
+++ b/pages/login.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <title>Login</title>
+    <link rel="stylesheet" href="../estilos_propios.css">
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
