--- a/principal.html
+++ b/principal.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="estilos_propios.css" />
     <title>
-      MII2025 Tramo II Talentos Digitales Ctes| Romina Noelia Orellano
+      MII2025 Tramo III Talentos Digitales Ctes| Romina Noelia Orellano
     </title>
     <script
       defer
@@ -86,7 +86,7 @@
                         <input
                           class="form-control me-2"
                           type="Search"
-                          placeholder="Search"
+                          placeholder="Busca tu receta aquí "
                           aria-label="Search"
                         />
                         <button class="btn btn-outline-success" type="submit">
